--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans');
 
 * {
-  font-family: 'Nunito Sans';
+  fnot-family: 'Nunito Sans';
 }
 
 .container {
